# hal-core-2.0

./: CMakeLists.txt  GitNotes.txt  README.md  configure  deps  readme.md  recompile  vendors
rtlib/: myApp
scripts/: README.md  halclean  halrun  realtime  rip-environment  rtapi.conf
src/: Makefile.inc  Makefile.modinc  config.h  config.status  configure
src/hal/components/dofs/: CMakeLists.txt  halmodule.h  runtest  runtest_ethercat
src/hal/components/dofs/cpp_interface/: CMakeLists.txt  cpp_interface.h  cpp_interface_global.h  libdofs.so.1.0
src/hal/components/ethercat/: CMakeLists.txt  myNote.txt
src/hal/components/ethercat/lcec/: CMakeLists.txt
src/hal/components/ethercat/lcec_conf/: CMakeLists.txt
src/hal/components/ethercat/src/: lcec_conf
src/hal/components/gvd/: CMakeLists.txt  halmodule.c  halmodule.h  runtest
src/hal/components/gvd/cpp_interface/: CMakeLists.txt  cpp_interface.cpp  cpp_interface.h
src/hal/components/hm2_eth/: CMakeLists.txt  runtest
src/hal/components/hostmot2/: CMakeLists.txt  runtest
src/hal/components/kinematic/: CMakeLists.txt  halmodule.c  runtest
src/hal/components/kinematic/cpp_interface/: CMakeLists.txt  Makefile  cpp_interface.cpp  cpp_interface.h  next.h
src/hal/components/matrix/cpp_interface/: Makefile  ui_control.h  ui_mainwindow.h
src/hal/components/motion/: CMakeLists.txt  motion-backup-0.c  motion-backup_1.c  motion.c  runtest
src/hal/components/opencascade/: CMakeLists.txt.autosave  halmodule.c  halmodule.h  myNote.txt  runtest
src/hal/components/opencascade/cpp_interface/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/hal/components/opencascade/cpp_interface/libocct/: opencascade.cpp
src/hal/components/parport/: CMakeLists.txt  runtest
src/hal/components/scurve/: CMakeLists.txt  common.h  readme.md  runtest  sc_engine.c  sc_engine.h  scurve.c
src/hal/components/skynet/hal/: CMakeLists.txt
src/hal/components/stepgen/: CMakeLists.txt  runtest
src/hal/components/synchrodofs/: CMakeLists.txt  runtest
src/hal/components/synchrodofs/cpp_interface/: cpp_interface.h
src/hal/components/test/: runtest  test.c
src/hal/components/threads/: CMakeLists.txt  runtest
src/hal/components/trajectory/cpp_interface/: libtrajectory_6DoFs.so.1.0  libtrajectory_6DoFs.so.1.0.0
src/hal/components/trajectory/cpp_interface/libhalcmdgui/: Makefile  libhalcmdgui  moc_mainwindow.cpp  ui_mainwindow.h
src/hal/halcmd/: CMakeLists.txt
src/hal/halcore/: CMakeLists.txt
src/hal/hallib/: CMakeLists.txt
src/module_helper/: CMakeLists.txt
src/objects/: hal_lib.tmp
src/rtapi/: CMakeLists.txt  rtapi_uspace.hh
